Fixed text-links using the wrong font

--- a/style.css
+++ b/style.css
@@ -133,15 +133,19 @@ input:focus, select:focus, textarea:focus {
     font-size: 36px;
     cursor: pointer;
 }
-.fab {
+.fab, .link-text {
     color: #000000;
 }
-.fab:hover {
-        color: #FABD5D;     
+.fab:hover, .link-text:hover {
+    color: #FABD5D;
 }
+.link-text {
+    font-family: 'Lato', serif;
+}
+
 .large {
-    margin: 3rem;
-    transform: scale(2);
+    margin: 2rem;
+    font-size: 70px;
 }
 .share {
     transform: scale(10);
